tests/ui/builtin-superkinds/builtin-superkinds-simple.stderr
error[E0277]: `Rc<i8>` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-simple.rs:6:14
   |
LL | impl Foo for std::rc::Rc<i8> { }
   |              ^^^^^^^^^^^^^^^ `Rc<i8>` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Rc<i8>`
help: item with same name found
  --> $SRC_DIR/alloc/src/rc.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
note: required by a bound in `Foo`
  --> $DIR/builtin-superkinds-simple.rs:4:13
   |
LL | trait Foo : Send { }
   |             ^^^^ required by this bound in `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
